--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -1,6 +1,6 @@
 .photo-details-modal {
-  background-color:  white;
-  box-shadow: 0 0 0 50vmax rgba(0,0,0,.5);
+  background-color: white;
+  box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 55%;
   left: 50%;
@@ -9,7 +9,6 @@
   width: 55%;
   overflow-y: scroll;
   border-radius: 12px;
-
 }
 
 .photo-details-modal__close-button {
@@ -33,7 +32,6 @@
 .photo-details-modal__image {
   max-width: 95%;
   border-radius: 8px;
-
 }
 
 .photo-details-modal__top-bar {
@@ -57,4 +55,23 @@
   margin-top: 24px;
   margin-bottom: 24px;
   width: 90%;
+}
+
+.photo-details-modal__photographer-location {
+  color: #838383;
+}
+.photo-details-modal__photographer-profile {
+  object-fit: cover;
+  border-radius: 100%;
+  vertical-align: middle;
+  margin-right: 8px;
+  width: 40px;
+  height: 40px;
+}
+
+.photo-details-modal__photographer-info {
+  margin-top: 5px;
+  font-weight: 700;
+  font-size: 12px;
+  margin-left: 8px;
 }
