--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -6,6 +6,7 @@
   border-style: solid;
   border-radius: 8px;
   max-width: fit-content;
+  background-color:  #FFFFFF;
 }
 
 .photo-list__image {
@@ -21,6 +22,10 @@
   width: 300px;
   height: 200px;
   object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 24px;
 }
 
 .photo-list__user-profile {
