--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -8,7 +8,8 @@
   -moz-box-shadow: 0 4px 6px -6px #222;
   box-shadow: 0 4px 6px -6px #222;
   height: 72px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
+  cursor: pointer;
 }
 
 .top-nav-bar__logo {
@@ -18,4 +19,9 @@
   color: #111;
   text-underline-position: auto;
   margin-left: 24px;
+  cursor: pointer;
+  &:hover {
+    text-decoration: overline;
+    color: cadetblue;
+  }
 }
